@startuml

title __DOMOTIX > MODEL's Class Diagram__\n

namespace src.domotix.model {
    class src.domotix.model.ElencoAttuatori {
    }

    class src.domotix.model.ElencoCategorieAttuatori {
    }

    class src.domotix.model.ElencoCategorieSensori {
    }

    class src.domotix.model.ElencoSensori {
    }

    class src.domotix.model.ElencoUnitaImmobiliari {
    }

    class src.domotix.model.ElencoAzioniProgramate {
    }

    namespace util {
    }

    namespace io {
    }

    namespace gestioneerrori {
        class src.domotix.model.gestioneerrori.LogErrori {
        }

        class src.domotix.model.gestioneerrori.StoreIstanzeErrori {
        }
    }

    namespace bean {
        namespace device {
        }
        namespace regola {
        }
    }
}


src.domotix.model.ElencoAttuatori --|> src.domotix.model.util.SommarioDispositivi
src.domotix.model.ElencoSensori --|> src.domotix.model.util.SommarioDispositivi
src.domotix.model.ElencoUnitaImmobiliari "*" o--> "1" src.domotix.model.bean.UnitaImmobiliare : unita
src.domotix.model.ElencoCategorieAttuatori "*" o--> "1" src.domotix.model.bean.device.CategoriaAttuatore : categorie
src.domotix.model.ElencoCategorieSensori "*" o--> "1" src.domotix.model.bean.device.CategoriaSensore : categorie
src.domotix.model.ElencoAzioniProgramate "*" o--> "1" src.domotix.model.bean.regola.Azione : azioni


@enduml
